# ChangeLog for media-video/ffmpeg
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.835 2015/02/18 14:28:33 aballier Exp $

  18 Feb 2015; Alexis Ballier <aballier@gentoo.org> ffmpeg-9999.ebuild:
  rework a bit cpu features handling to pass only relevant options to configure

  18 Feb 2015; Alexis Ballier <aballier@gentoo.org> ffmpeg-9999.ebuild:
  drop old & useless comment

  18 Feb 2015; Alexis Ballier <aballier@gentoo.org> ffmpeg-9999.ebuild:
  factorize filling IUSE and the map useflag -> configure option.

  18 Feb 2015; Alexis Ballier <aballier@gentoo.org> ffmpeg-9999.ebuild:
  zvbi requires gpl too

  18 Feb 2015; Alexis Ballier <aballier@gentoo.org> ffmpeg-9999.ebuild:
  Do not enable old xlib based x11grab when xcb is used. xcb based grabber is
  LGPL.

  18 Feb 2015; Alexis Ballier <aballier@gentoo.org> ffmpeg-9999.ebuild,
  metadata.xml:
  Add gpl & postproc useflags so that ffmpeg can be built in LGPL mode.

  18 Feb 2015; Alexis Ballier <aballier@gentoo.org> ffmpeg-9999.ebuild:
  add required use for x86 cpu flags

*ffmpeg-2.5.4 (14 Feb 2015)

  14 Feb 2015; Alexis Ballier <aballier@gentoo.org> +ffmpeg-2.5.4.ebuild:
  version bump

*ffmpeg-1.2.12 (14 Feb 2015)

  14 Feb 2015; Alexis Ballier <aballier@gentoo.org> +ffmpeg-1.2.12.ebuild:
  bump for the 1.2 branch

  11 Feb 2015; Alexis Ballier <aballier@gentoo.org> ffmpeg-2.2.12.ebuild:
  forward port keywords after masking optional useflags, bug #510340

  31 Jan 2015; Patrick Lauer <patrick@gentoo.org> metadata.xml:
  Remove unneded useflag description from metadata.xml

  31 Jan 2015; Patrick Lauer <patrick@gentoo.org> metadata.xml:
  Remove unneded useflag description from metadata.xml

  30 Jan 2015; Michał Górny <mgorny@gentoo.org> ffmpeg-0.10.15.ebuild,
  ffmpeg-1.0.10.ebuild, ffmpeg-1.2.11.ebuild, ffmpeg-1.2.6-r1.ebuild,
  ffmpeg-2.2.12.ebuild, ffmpeg-2.5.3.ebuild, ffmpeg-9999.ebuild: